# docanalyzer

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  clean_imports.py  config.json  import_analysis_report.txt  pyproject.toml  setup.cfg  setup.py  test_file_processing.py  test_unified_config_direct.py  test_unified_file_direct.py
docanalyzer/: __init__.py  _version.py  main.py  py.typed
docanalyzer/adapters/: __init__.py  vector_store_adapter.py
docanalyzer/cache/: processing_cache.py
docanalyzer/commands/: __init__.py
docanalyzer/commands/auto_commands/: __init__.py  health_check_command.py  processing_stats_command.py  queue_status_command.py  system_stats_command.py
docanalyzer/config/: __init__.py  extensions.py  integration.py  unified_config.py  validation.py
docanalyzer/filters/: __init__.py  base.py  file_filter.py  python_filter.py  registry.py  text_filter.py
docanalyzer/logging/: __init__.py  integration.py
docanalyzer/models/: __init__.py  database.py  errors.py  health.py  performance.py  processing.py  semantic_chunk.py  unified_errors.py  unified_file.py
docanalyzer/models/file_system/: __init__.py  directory.py  file_info.py  lock_file.py
docanalyzer/monitoring/: __init__.py  health.py  metrics.py
docanalyzer/pipeline/: __init__.py  base.py  chunker.py
docanalyzer/processors/: __init__.py  base_processor.py  markdown_processor.py  text_processor.py
docanalyzer/services/: __init__.py  child_process_manager.py  chunking_manager.py  database_manager.py  directory_orchestrator.py  directory_scanner.py  error_handler.py  file_processor.py  lock_manager.py  main_process_manager.py  performance_optimizer.py  process_communication.py  vector_store_wrapper.py
docanalyzer/utils/: __init__.py  file_processing_logger.py  file_utils.py
docanalyzer/workers/: __init__.py  directory_scanner_worker.py
docs/: ARCHITECTURE_STANDARDS.md  CODING_STANDARDS.md  FILE_NAMING_STANDARDS.md  IMPLEMENTATION_PLAN.md  PROJECT_CODING_STANDARDS.md  PROJECT_STRUCTURE_STANDARDS.md  architecture_analysis_report.md  comparative_analysis_report.md  development_process.md  fix_plan.md  implementation_plan.md  naming_standards.md  object_model.md  tech_spec.md
test_files/: test_document.txt  test_document_0.txt  test_document_1.txt  test_document_2.txt
tests/: __init__.py
tests/integration/: README.md  __init__.py  conftest.py  requirements.txt  run_integration_tests.py  test_concurrent_processing.py  test_error_handling.py  test_full_pipeline.py  test_load_testing.py  test_real_mcp_integration.py  test_real_services_integration.py
tests/unit/: __init__.py  test_commands_init.py  test_database.py  test_directory_scanner.py  test_errors.py  test_file_utils.py  test_init.py  test_lock_manager.py  test_main.py  test_performance_optimizer.py  test_processing_cache.py  test_services_init.py  test_text_processor.py  test_version.py  test_version_extended.py
tests/unit/test_adapters/: __init__.py  test_vector_store_adapter.py  test_vector_store_adapter_extended.py
tests/unit/test_commands/: test_health_check_command.py  test_processing_stats_command.py  test_queue_status_command.py  test_system_stats_command.py
tests/unit/test_config/: __init__.py  test_extensions.py  test_integration.py  test_unified_config.py  test_unified_config_simple.py  test_validation.py  test_validation_extended.py
tests/unit/test_filters/: __init__.py  test_file_filter.py
tests/unit/test_logging/: __init__.py  test_integration.py
tests/unit/test_models/: __init__.py  test_database.py  test_database_extended.py  test_errors.py  test_file_system.py  test_file_system_extended.py  test_health.py  test_processing.py  test_unified_errors.py  test_unified_file.py
tests/unit/test_monitoring/: __init__.py  test_health.py  test_metrics.py
tests/unit/test_processors/: __init__.py  test_base_processor.py  test_markdown_processor.py  test_text_processor.py
tests/unit/test_services/: __init__.py  test_child_process_manager.py  test_chunking_manager.py  test_database_manager.py  test_database_manager_extended.py  test_database_manager_fixed.py  test_directory_orchestrator.py  test_directory_scanner.py  test_error_handler.py  test_file_processor.py  test_main_process_manager.py  test_process_communication.py  test_vector_store_wrapper.py
tests/unit/test_utils/: test_file_processing_logger.py
tests/unit/test_workers/: test_directory_scanner_worker.py
